--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-.idea
-Arch
+# IDE specific
+.idea/
+.vscode/
+
+# Python specific
+__pycache__/
+.env
+.venv
+env/
+venv/
+
+# Other dirs
+Arch/
+model/
+dataset/
+
+# Other files
 InputData.7z
